--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.pip"
 # command to run tests
-script: py.test
+script: py.test tests.py
