--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 python:
   - "2.7"
 # command to install dependencies
-install: "pip install -r requirements.pip"
+install: "pip install -r chemevol/requirements.pip"
 # command to run tests
-script: py.test tests.py
+script: py.test chemevol/tests.py
